# varen

./: .pre-commit-config.yaml  pyproject.toml
tests/: test_parser.py
varen/: main.py
