[tool.poetry]
name = "varen"
version = "0.1.0"
description = ""
authors = ["Daniel Steman <daniel.steman@bridgefund.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
